<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:gravity="center"
    android:background="@drawable/dark_blue_background"
    tools:context="com.example.trailerbuzz.activities.LoginActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Login"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_gravity="left"
        android:layout_marginBottom="20dp">
    </TextView>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:textColor="@color/silver"
        android:textSize="18sp"
        android:layout_gravity="left">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_login_to_continue"
        android:textColor="@color/silver"
        android:textSize="18sp"
        android:layout_marginBottom="30dp"
        android:layout_gravity="left">
    </TextView>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/white"
        android:textSize="20sp">
    </TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:padding="4dp"
        android:id="@+id/user_email"
        android:textColor="@color/black"
        android:inputType="textEmailAddress"
        android:background="@drawable/edit_text">
    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="20sp">
    </TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:paddingLeft="4dp"
        android:inputType="textPassword"
        android:id="@+id/user_password"
        android:textColor="@color/black"
        android:background="@drawable/edit_text">
    </EditText>
    
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_password"
        android:buttonTint="@color/white"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:id="@+id/password_checkbox">
    </CheckBox>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:textColor="@color/white"
        android:text="@string/login"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:id="@+id/login_button">
    </Button>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginTop="5dp"
        android:id="@+id/register_text"
        android:text="@string/register_text">
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginTop="5dp"
        android:id="@+id/forget_password"
        android:text="@string/forget_password">
    </TextView>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_progress_bar"
        android:indeterminateTint="@color/white"
        android:indeterminate="true"
        style="@style/Widget.MaterialComponents.LinearProgressIndicator"
        android:visibility="invisible"
        android:layout_marginTop="20dp" />


</LinearLayout>