<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:gravity="center"
    android:background="@drawable/dark_blue_background"
    tools:context="com.example.trailerbuzz.activities.RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_gravity="left">
    </TextView>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_a_new_account"
        android:textColor="@color/silver"
        android:textSize="18sp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="left">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="35dp"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:textColor="@color/white"
        android:textSize="20sp">
    </TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:paddingLeft="4dp"
        android:background="@drawable/edit_text"
        android:id="@+id/user_first_name"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        >
    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        android:textColor="@color/white"
        android:textSize="20sp"
        >
    </TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:paddingLeft="4dp"
        android:id="@+id/user_last_name"
        android:textColor="@color/black"
        android:background="@drawable/edit_text">
    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone_no"
        android:textColor="@color/white"
        android:textSize="20sp"
        >
    </TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:id="@+id/phone"
        android:paddingLeft="4dp"
        android:textColorHint="@color/white"
        android:textColor="@color/black"
        android:inputType="phone"
        android:background="@drawable/edit_text">
    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/white"
        android:textSize="20sp"
        >
    </TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:id="@+id/user_email"
        android:paddingLeft="4dp"
        android:textColorHint="@color/white"
        android:textColor="@color/black"
        android:inputType="textEmailAddress"
        android:background="@drawable/edit_text">
    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="20sp"
        >
    </TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:paddingLeft="4dp"
        android:inputType="textPassword"
        android:id="@+id/user_password"
        android:textColorHint="@color/white"
        android:textColor="@color/black"
        android:background="@drawable/edit_text">
    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:textColor="@color/white"
        android:textSize="20sp"
        >
    </TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:paddingLeft="4dp"
        android:inputType="textPassword"
        android:background="@drawable/edit_text"
        android:id="@+id/confirm_password"
        android:textColorHint="@color/white"
        android:textColor="@color/black">
    </EditText>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_password"
        android:buttonTint="@color/white"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:id="@+id/password_checkbox">
    </CheckBox>
    </LinearLayout>
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:textColor="@color/white"
        android:text="@string/register"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        android:id="@+id/register_button">
    </Button>


    <TextView
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:id="@+id/login_text"
        android:text="@string/login_text">
    </TextView>
    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_progress_bar"
        app:trackColor="@color/white"
        app:indicatorColor="@color/white"
        android:indeterminateTint="@color/white"
        android:indeterminate="true"
        style="@style/Widget.MaterialComponents.LinearProgressIndicator"
        android:visibility="invisible"
        android:layout_marginTop="20dp" />


</LinearLayout>