<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:gravity="center"
    android:background="@drawable/dark_blue_background"
    tools:context="com.example.trailerbuzz.activities.RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="My Profile"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:layout_marginBottom="30dp"
        android:layout_gravity="left">
    </TextView>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:textColor="@color/white"
        android:textSize="20sp">
    </TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:padding="4dp"
        android:background="@drawable/edit_text"
        android:id="@+id/user_first_name"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        >
    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        android:textColor="@color/white"
        android:textSize="20sp"
        >
    </TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:padding="4dp"
        android:id="@+id/user_last_name"
        android:textColor="@color/black"
        android:background="@drawable/edit_text">
    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone_no"
        android:textColor="@color/white"
        android:textSize="20sp"
        >
    </TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:id="@+id/phone"
        android:paddingLeft="4dp"
        android:textColorHint="@color/white"
        android:textColor="@color/black"
        android:inputType="phone"
        android:background="@drawable/edit_text">
    </EditText>

    <Button
        android:layout_width="200dp"
        android:padding="3dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:textColor="@color/white"
        android:text="Update"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        android:id="@+id/update_button">
    </Button>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/profile_progress_bar"
        android:indeterminateTint="@color/white"
        android:indeterminate="true"
        style="@style/Widget.MaterialComponents.LinearProgressIndicator"
        android:visibility="invisible"
        android:layout_marginTop="20dp" />


</LinearLayout>